flapivor/tests/m3/hopix/typechecker/good/55-while.hopix
val x : Ref<Int> = ref (4)

val main : Int =
    while (!x >? 0) {
      x := !x - 1
    };
    !x