flapivor/tests/m3/hopix/typechecker/bad/75-while-03.hopix
val main : Unit = while (true) { "Bong!" }